--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 #bg-img {
-    background-image: url('https://images.pexels.com/photos/589062/pexels-photo-589062.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
+    /* background-image: url('https://images.pexels.com/photos/589062/pexels-photo-589062.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260'); */
+    background-color: royalblue;
     background-position: center; 
     height: 600px;
     width: auto;
@@ -17,13 +18,80 @@
 }
 
 #help {
-    height: 85px;
+    height: 105px;
     width: auto;
 }
 
 #map {
-    height: 400px;
-    width: 100%;
     margin-top: 25px;
-    float: right;
+    height: 450px;
+    width: 50%;
+    display: inline-block
+}
+
+.button {
+    margin-top: 25px;
+    text-align: center;
+}
+
+/* #pac-input {
+    display: none;
+} */
+
+.container-4 input#hyv-search {
+    width: 500px;
+    height: 30px;
+    border: 1px solid #c6c6c6;
+    font-size: 10pt;
+    float: left;
+    padding-left: 15px;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -moz-border-top-left-radius: 5px;
+    -moz-border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+.container-4 button.icon {
+    height: 30px;
+    background: #f0f0f0 url('images/searchicon.png') 10px 1px no-repeat;
+    background-size: 24px;
+    -webkit-border-top-right-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
+    -moz-border-radius-topright: 5px;
+    -moz-border-radius-bottomright: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 1px solid #c6c6c6;
+    width: 50px;
+    margin-left: -44px;
+    color: #4f5b66;
+    font-size: 10pt;
+}
+
+#quote {
+    margin-top: 15px;
+    text-align: center;
+    color: white;
+    font-size: 18pt;
+    /* font-weight: bold; */
+}
+
+.scrollLink {
+    text-align: center;
+    color: white;
+    font-size: 15pt;
+}
+
+#scroll {
+    text-align: center;
+}
+#anchor1 {
+    background-image: url('/assets/images/toilet-paper-background.jpg');
+    text-align: center;
+    background-position: center; 
+    height: 600px;
+    width: auto;
+    background-size: cover;
+    background-attachment: fixed;
 }
