--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,6 @@
 #bg-img {
-    /* background-image: url('https://images.pexels.com/photos/589062/pexels-photo-589062.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260'); */
     background-color: royalblue;
-    background-position: center; 
-    height: 600px;
-    width: auto;
-    background-size: cover;
-    background-attachment: fixed;
+    height: 1000px;
 }
 
 #search {
@@ -13,7 +8,7 @@
 }
 
 #logo {
-    padding-top: 150px;
+    padding-top: 350px;
     text-align: center;
 }
 
@@ -23,10 +18,10 @@
 }
 
 #map {
-    margin-top: 25px;
+    margin-top: 100px;
     height: 450px;
     width: 50%;
-    display: inline-block
+    display: inline-block;
 }
 
 .button {
@@ -87,11 +82,43 @@
     text-align: center;
 }
 #anchor1 {
-    background-image: url('/assets/images/toilet-paper-background.jpg');
     text-align: center;
     background-position: center; 
-    height: 600px;
+    height: 1000px;
     width: auto;
     background-size: cover;
     background-attachment: fixed;
+}
+
+body {
+    background-image: url('../images/toilet-paper-background.jpg')
+}
+
+#pac-input {
+    border-style: none;
+}
+
+#anchor2 {
+    background-color: bisque;
+    height: 1000px;
+    text-align: center;
+}
+
+#mock {
+    text-align: center;
+    margin-top: 50px;
+    display: inline-block;
+    height: 500px;
+    width: auto;
+}
+
+#button-about {
+    border-style: none;
+    font-size: 20pt;
+    color: white;
+    background: royalblue;
+}
+
+#button-addon2 {
+    font-size: 20px;
 }
