all current changes, html css js, working map with search bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,12 @@
 }
 
 #logo {
-    padding-top: 350px;
+    padding-top: 175px;
     text-align: center;
 }
 
 #help {
-    height: 105px;
+    height: 175px;
     width: auto;
 }
 
@@ -65,13 +65,20 @@
 }
 
 #quote {
-    margin-top: 15px;
+    margin-top: 18px;
     text-align: center;
     color: white;
     font-size: 18pt;
     /* font-weight: bold; */
 }
 
+#quote1 {
+    margin-top: 15px;
+    text-align: center;
+    color: white;
+    font-size: 18pt;
+    /* font-weight: bold; */
+}
 .scrollLink {
     text-align: center;
     color: white;
@@ -122,3 +129,80 @@ body {
 #button-addon2 {
     font-size: 20px;
 }
+
+#plunger {
+    width: 20px;
+    max-width: 100%;
+    height: auto;
+}
+
+nav {
+    background-color: royalblue;
+    color:white;
+}
+
+a {
+    color: white;
+    font-size: 15pt;
+}
+
+.navbar-brand {
+    font-size: 25pt;
+    font-family: 'Concert One', cursive;
+}
+
+
+    /* #fly { */
+    
+        
+         /* * Make the initial position to be the center of the circle you want this
+         * object follow. */
+         
+         /* width: 50px;
+         height:50px;
+         background-image: url('../images/fly.png');
+         background-repeat: no-repeat;
+         position: absolute;
+        left: 755px;
+        top: 343px;  */
+    
+        
+         /* * Sets up the animation duration, timing-function (or easing)
+         * and iteration-count. Ensure you use the appropriate vendor-specific 
+         * prefixes as well as the official syntax for now. Remember, tools like 
+         * CSS Please are your friends! */
+         
+        /* -webkit-animation: myOrbit 4s linear infinite; Chrome, Safari 5  */
+           /* -moz-animation: myOrbit 4s linear infinite; Firefox 5-15 */
+             /* -o-animation: myOrbit 4s linear infinite; Opera 12+ */
+                /* animation: myOrbit 4s linear infinite; /*Chrome, Firefox 16+,   */
+                                                          /* IE 10+, Safari 5 */ 
+         
+        
+        
+    /* }  */
+    
+    
+     /* * Set up the keyframes to actually describe the begining and end states of 
+     * the animation.  The browser will interpolate all the frames between these 
+     * points.  Again, remember your vendor-specific prefixes for now! */
+     
+    /* @-webkit-keyframes myOrbit {
+        from { ?-webkit-transform: rotate(0deg) translateX(150px) rotate(0deg); }
+        to   { -webkit-transform: rotate(360deg) translateX(150px) rotate(-360deg); }
+    }
+    
+    @-moz-keyframes myOrbit {
+        from { -moz-transform: rotate(0deg) translateX(150px) rotate(0deg); }
+        to   { -moz-transform: rotate(360deg) translateX(150px) rotate(-360deg); }
+    }
+    
+    @-o-keyframes myOrbit {
+        from { -o-transform: rotate(0deg) translateX(150px) rotate(0deg); }
+        to   { -o-transform: rotate(360deg) translateX(150px) rotate(-360deg); }
+    }
+    
+    @keyframes myOrbit {
+        from { transform: rotate(0deg) translateX(150px) rotate(0deg); }
+        to   { transform: rotate(360deg) translateX(150px) rotate(-360deg); }
+    }  */
